tests/compile_fail/display/legacy_fmt_syntax.stderr
error: legacy syntax, remove `fmt =` and use `"Stuff({}): {}", bar` instead
 --> tests/compile_fail/display/legacy_fmt_syntax.rs:2:11
  |
2 | #[display(fmt = "Stuff({}): {}", "bar")]
  |           ^^^

error: legacy syntax, remove `fmt =` and use `"Stuff({}): {}", _0` instead
 --> tests/compile_fail/display/legacy_fmt_syntax.rs:8:11
  |
8 | #[display(fmt = "Stuff({}): {}", _0)]
  |           ^^^
